--- a/03do10/estilizando.css
+++ b/03do10/estilizando.css
@@ -44,7 +44,7 @@ p {
     /*width vem do ingles e significa largura*/
     /* espaço determinado para onde a imagem tem que caber */
 
-    background-image: url(https://images.unsplash.com/photo-1718027765066-7d18bdd6113c);
+    background-image: url(https://highsales.digital/images/blog/Web-Design.jpg);
     /* nao salvei a imagem no computador por isso puxei o URL */
     background-size: cover;
     /* o formato cover ajusta da imagem dentro do espaço determinado sem deformar ela mas
